organizing html into folders

--- a/layout/blocks.html
+++ b/layout/blocks.html
@@ -3,15 +3,9 @@
   <meta charset="UTF-8" />
   <title>Art Two</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: Monaco, sans-serif;
-      color: hsl(0, 100%, 100%)
-    }
 
+  <link href="../base.css" rel="stylesheet" />
+  <style>
     main {
       background-color: hsl(180, 50%, 50%);
       display: flex;
